# ChangeLog for sys-cluster/openmpi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*openmpi-1.8.1 (03 Jun 2014)

  03 Jun 2014; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.8.1.ebuild:
  Bump (#511018). Add dep on zlib and drop la files (#402095)

*openmpi-1.6.5 (11 Jul 2013)

  11 Jul 2013; Justin Bronder <jsbronder@gentoo.org> -openmpi-1.6.4-r1.ebuild,
  +openmpi-1.6.5.ebuild:
  bump

  02 Jul 2013; Justin Bronder <jsbronder@gentoo.org>
  files/hooks-disable-malloc-override-inside-of-Gentoo-sandb.patch:
  Update patch per sandbox team

  02 Jul 2013; Justin Bronder <jsbronder@gentoo.org> -openmpi-1.6.4.ebuild:
  Remove old

*openmpi-1.6.4-r1 (02 Jul 2013)

  02 Jul 2013; Justin Bronder <jsbronder@gentoo.org>
  +files/hooks-disable-malloc-override-inside-of-Gentoo-sandb.patch,
  +openmpi-1.6.4-r1.ebuild:
  Do not override malloc when in a sandbox environment.  Resolves #462602.

*openmpi-1.6.4 (09 Apr 2013)

  09 Apr 2013; Justin Bronder <jsbronder@gentoo.org> -openmpi-1.6.3.ebuild,
  +openmpi-1.6.4.ebuild:
  Bump, workaround #462602

*openmpi-1.6.3 (10 Jan 2013)

  10 Jan 2013; Justin Bronder <jsbronder@gentoo.org> -openmpi-1.5.3.ebuild,
  +openmpi-1.6.3.ebuild:
  sync with gentoo-x86

  14 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> openmpi-1.5.3.ebuild:
  Add slurm support by Nicolas Bigaouette <nbigaouette@gmail.com>

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> openmpi-1.5.3.ebuild:
  Added fortran-2.eclass support

  28 Mar 2011; Justin Bronder <jsbronder@gentoo.org>
  -files/openmpi-1.4.1-r22513.patch, +files/openmpi-r24328.patch,
  openmpi-1.5.3.ebuild:
  Fix hardened test failure (#360185) and cleanup.

  22 Mar 2011; Justin Bronder <jsbronder@gentoo.org> openmpi-1.5.3.ebuild:
  Remove libtool if it was installed by USE=vt, bug #359917.

  22 Mar 2011; Justin Bronder <jsbronder@gentoo.org> openmpi-1.5.3.ebuild:
  Make the USE=vt blockers conditional on being an unclasssed merge.
