@@ -1,3 +1,4 @@
 DIST openmpi-1.6.5.tar.bz2 10943881 SHA256 fe37bab89b5ef234e0ac82dc798282c2ab08900bf564a1ec27239d3f1ad1fc85 SHA512 b0ede0264cd9263b8ba59ec51d17ad47b5f20d49d219ca05f7c396d608398d517b2023a46a2535fd6191160d709e4805c4de436dcfee56eda287383bd69f9652 WHIRLPOOL d0288677827c1deba17295ee1b69cd21da294ac314cc49404389b4c286384f9f2f229cae4c4fd62511e7f20abc510998642d6a2edfac3f16f83078f474f8e735
 DIST openmpi-1.7.3.tar.bz2 12479769 SHA256 438d96c178dbf5a1bc92fa1d238a8225d87b64af26ce2a07789faaf312117e45 SHA512 a66d3b1df2a7dc76df4ffa0083919cefb0e7d4133f80bfd5c1c4bf6c5254f2a4773e3c4c9069c39b1467057c406eba3ea892d4a86030b0bd8097d12073af8ef8 WHIRLPOOL 5509f48370f5a00fee68048df5d84824fa63e528df617fc9209840f3077c2c868dbf2c3da964334e7a80c428056a5e2f9a39ddcda9967350e68222444ca918f0
 DIST openmpi-1.8.1.tar.bz2 13297716 SHA256 171427ebc007943265f33265ec32e15e786763952e2bfa2eac95e3e192c1e18f SHA512 f1b35ace5c62c89dccdab3f2ee774dae8eaf7d7bd9e41136bb5953f9c61207620917d1905be95350215c6dbc03b494ddd18732b6b7520893e51c5b1a8861fb99 WHIRLPOOL 4d429e7c23131f050aebad11f6eb9048b09979af58d1efbbdc5f6d1d349bd5164745fdbc2ec53f326d8ae99b9af2313e2bc2bf1fb675343e8e231b787ff0aa4d
+DIST openmpi-1.8.3.tar.bz2 13301056 SHA256 2ef02dab61febeb74714ff80d508c00b05defc635b391ed2c8dcc1791fbc88b3 SHA512 dbb8ae576d5272defdf5fd9cc09ddcd488d9076e2f4f6b1bc1a49e7ce6345784e1a637615705873feead7c86b20c3ec204cddda8fdbab58342e76f07752154dc WHIRLPOOL 98ef14928e1f620d89212ae53c2353fc96e801a3da96997bd09572e411e7debd30d49b846af459bfe92f7b79e3efadfe74ed4668a85d82ef0324cfaf4e07ed80
