@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*openmpi-1.8.3 (15 Oct 2014)
+
+  15 Oct 2014; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.8.3.ebuild:
+  sys-cluster/openmpi: bump
+
 *openmpi-1.8.1 (03 Jun 2014)
 
   03 Jun 2014; Justin Bronder <jsbronder@gentoo.org> +openmpi-1.8.1.ebuild:
